# GenAI-Lab

Assistant frontend code/: BackgroundImg.js  ChangeProduct.js  ChatBot.css  ChatBot.js
Assistant frontend code/History/: History.css  History.js
Assistant frontend code/History/Badges/: Badges.css  Badges.js
Assistant frontend code/History/Footer/: Footer.css  Footer.js
Assistant frontend code/History/Message/: Message.css  Message.js
Assistant frontend code/History/PromptExample/: PromptExample.css  PromptExample.js
Assistant frontend code/Query/: Query.css  Query.js  SendButton.js
GAI-Lab backend/: main.py
GAI-Lab backend/clients/auth_client/: __init__.py
GAI-Lab backend/clients/cache_client/: __init__.py
GAI-Lab backend/clients/data_client/: __init__.py
GAI-Lab backend/clients/file_client/: __init__.py
GAI-Lab backend/projects/src/: BaseTask.py  run_task.py
GAI-Lab backend/projects/src/ntx_lab_diagram_ingestion/: diagram_ingestion.py  pyproject.toml
GAI-Lab backend/projects/src/ntx_lab_diagram_ingestion/tasks/: convert_visio_to_bpmn.py  form_consts.py  tag_metrics.py
GAI-Lab backend/projects/src/ntx_lab_process_capture/: process_capture.py  pyproject.toml
GAI-Lab backend/projects/src/ntx_lab_process_capture/tasks/: describe_process_activities.py  form_consts.py  generate_process_text.py
GAI-Lab backend/projects/src/ntx_lab_skuid_app_generator/: pyproject.toml  skuid_app_generator.py
GAI-Lab backend/projects/src/ntx_lab_skuid_app_generator/tasks/: form_consts.py  generate_app.py  get_schema.py  update_schema.py
GAI-Lab backend/resolvers/src/: __init__.py  client.py
GAI-Lab backend/workers/basic_worker/: worker.py
GAI-Lab frontend/InputFields/: InputFields.css  InputFields.jsx
GAI-Lab frontend/InputFields/InputTypes/: BooleanInput.jsx  ChatHistory.jsx  CheckboxInput.jsx  DateTimeInput.jsx  FileInput.jsx  FormDisplay.jsx  GeneralObject.jsx  RenderJson.jsx  SelectInput.jsx  SkuidFieldsForm.jsx  TextInput.jsx  index.js
GAI-Lab frontend/InputFields/Renders/: RenderField.jsx  RenderInput.jsx  RenderSection.jsx
(+46 files in other folders)
